--- a/simon.Rmd
+++ b/simon.Rmd
@@ -128,7 +128,11 @@ ggplot(data = data, aes(x = rating, y=genre)) +
 
 
 ```
+**Beschreibung**:
+Die Verteilung der Ratings zeigt klar, dass das meistgebrauchte Rating die 4 ist.
 
+Bei der Unterscheidung der Bewertung nach den Filmgenres können keine grosse Unterschiede festgestellt wird. Bei den 
+Horrorfilmen jedoch tendiert der Median und das 1 Quartil tiefer zu sein als bei den andern Genres. Die Medianwerte von Fantasy, Comedy und Children sind auch eher tief.
 
 
 ### 3. Wie verteilen sich die mittleren Kundenratings pro Film?
