--- a/recommender.Rmd
+++ b/recommender.Rmd
@@ -7,6 +7,14 @@ library(tidyr)
 library(coop)
 library(gridExtra)
 ```
+```{r}
+movies_random_selected <- slice(MovieLense_df, sample(1:n()))
+movies_random_selected
+```
+```{r}
+movies_random_selected <- slice(MovieLense_df, sample(1:n()))
+movies_random_selected
+```
 Aufgabe: Reduziere den MovieLense Datensatz auf rund 400 Kunden 
 und 700 Filme, indem du Filme und Kunden  mit sehr wenigen Ratings 
 entfernst.
@@ -21,8 +29,8 @@ MovieLenseMeta_df <- as(MovieLenseMeta, "data.frame")
 ```{r}
 MOVIE_MIN_RATED = 700
 MIN_MOVIES_RATED = 400
+RANDOM_SELECTED_ROWS = 67427 #
 ####
-
 
 user_min_movies_rated <- MovieLense_df %>%
   count(user) %>%
@@ -37,6 +45,9 @@ movies_min_rated <- MovieLense_df %>%
   head(MOVIE_MIN_RATED) %>%
   select(item)
 
+Movies_random_selected_df <- slice(MovieLense_df, sample(1:n())) %>%
+  head(RANDOM_SELECTED_ROWS)
+
 MovieLense_user_movies_reduced_df <- MovieLense_df %>%
   inner_join(user_min_movies_rated, by='user') %>%
   inner_join(movies_min_rated, by='item')
@@ -44,6 +55,26 @@ MovieLense_user_movies_reduced_df <- MovieLense_df %>%
 ### Sparsity
 image(MovieLense)
 image(coerce(MovieLense_user_movies_reduced_df, MovieLense))
+image(coerce(movies_random_selected_df, MovieLense))
+```
+```{r}
+calc_sparsity <- function(RRM){
+  density_ = nratings(RRM) / (nrow(RRM)*ncol(RRM))
+  return (1 - density_)
+}
+full_spars = calc_sparsity(coerce(MovieLense_df, MovieLense))
+reduced_spars = calc_sparsity(coerce(MovieLense_user_movies_reduced_df, MovieLense))
+rand_spars = calc_sparsity(coerce(Movies_random_selected_df, MovieLense))
+
+all_spars = c(full_spars, reduced_spars, rand_spars)
+spars_name = c('Full Matrix', 'Reduced Matrix', 'Random Matrix')
+
+ggplot(mapping=aes(spars_name, all_spars)) + 
+  geom_col() +
+  ggtitle(paste("Sparsity der verschiedenen Matrizen. "))
+```
+```{r}
+all_spars
 ```
 ```{r}
 rating_mean <- MovieLense_user_movies_reduced_df %>%
@@ -73,7 +104,20 @@ p2 <-ggplot(rating_mean, aes(x=mean)) +
   geom_vline(aes(xintercept=mean(mean)),
             color="blue", linetype="dashed", size=1)
 
-grid.arrange(p1, p2 , ncol=1, nrow=2)
+rating_mean <- Movies_random_selected_df %>%
+  group_by(item) %>%
+  summarise(mean = mean(rating)) %>%
+  select(item, mean) %>%
+  arrange(desc(mean))
+
+
+p3 <-ggplot(rating_mean, aes(x=mean)) + 
+  geom_density() +
+  ggtitle("Verteilung der mittleren Kundenratings bei Zufallsauswahl") + 
+  geom_vline(aes(xintercept=mean(mean)),
+            color="blue", linetype="dashed", size=1)
+
+grid.arrange(p1, p2, p3, ncol=1, nrow=3)
 
 ```
 Aufgabe: Erzeuge einen IBCF Recommender und analysiere die 
@@ -82,18 +126,27 @@ Datensatz.
 1.Zerlege den reduzierten MovieLense Datensatz in ein disjunktes Trainings-
 und Testdatenset im Verhältnis 4:1
 ```{r}
+train_test_split <- function(RRM, ratio=0.8){
+  train_idx <- sample(x = c(TRUE, FALSE), size = nrow(RRM), replace = TRUE, 
+      prob = c(ratio, 1 - ratio))
+  
+  RRM_train <- RRM[train_idx, ]
+  RRM_test <- RRM[!train_idx, ]
+  
+  return (c(RRM_train, RRM_train))
+}
+
 set.seed(69420)
-MovieLense_user_movies_reduced <- coerce(MovieLense_user_movies_reduced_df, MovieLense)
 
-train_idx <- sample(x = c(TRUE, FALSE), size = nrow(MovieLense_user_movies_reduced), replace = TRUE, 
-    prob = c(0.75, 0.25))
-
-MovieLense_train <- MovieLense_user_movies_reduced[train_idx, ]
-MovieLense_test <- MovieLense_user_movies_reduced[!train_idx, ]
+train_test_reduced <- train_test_split(coerce(MovieLense_user_movies_reduced_df, MovieLense))
 ```
+```{r}
+train_test_reduced[1]
+```
+
 2.Trainiere ein IBCF Modell mit 30 Nachbarn und Cosine Similarity
 ```{r}
-Recommender_model_IBCF <- Recommender(data = MovieLense_train, method = "IBCF", parameter = list(k = 30, 
+Recommender_model_IBCF <- Recommender(data = train_test_reduced[1], method = "IBCF", parameter = list(k = 30, 
     method = "Cosine"))
 Recommender_model_IBCF
 ```
@@ -101,10 +154,16 @@ Recommender_model_IBCF
 Ähnlichkeitsvergleiche verwendet werden,
 
 ```{r}
+similarity_lower
+```
+
+```{r}
 similarity_mat <- as.matrix(Recommender_model_IBCF@model$sim)
 similarity_lower <- similarity_mat[lower.tri(similarity_mat)]
+similarity_lower <- replace(similarity_lower, 0.0, NA)
+similarity_lower[similarity_lower == 0] <- NA  
 ggplot(mapping = aes(x=similarity_lower)) +
-  geom_density(fill="grey") + labs(title="Verteilung Aehnlichkeiten") + xlab("Cosine-Aehnlichkeit")
+  geom_histogram(fill="grey", na.rm=TRUE) + labs(title="Verteilung Aehnlichkeiten") + xlab("Cosine-Aehnlichkeit")
 ```
 4.Bestimme die Filme, die am häufigsten in der Cosine-Ähnlichkeitsmatrix 
 auftauchen und analysiere deren Vorkommen und Ratings im reduzierten 
